# job-scout

./: pyproject.toml  requirements.txt
.github/workflows/: daily_digest.yml
config/: config.yaml
data/: sent_jobs.json
src/job_scout/: __main__.py  config.py  dedup.py  email_builder.py  email_sender.py  main.py  models.py  public_company_filter.py  state.py
src/job_scout/indirect/: career_page_resolver.py  funding_monitor.py
src/job_scout/sources/: adzuna.py  ashby.py  base.py  greenhouse.py  jobspy_source.py  lever.py  the_muse.py
templates/: digest.html
